Add animations to menu page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -7,6 +7,7 @@
   </title>
   <link rel='stylesheet' href='/stylesheets/menu.css' />
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
 </head>
 
@@ -19,11 +20,11 @@
   </div>
 
   <section class="menus-section">
-    <h2>Appeitzers</h2>
+    <h2 data-aos="fade-up">Appeitzers</h2>
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'APPETIZERS'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -41,7 +42,7 @@
   </section>
 
   <section class="menus-section">
-    <div class="food_details">
+    <div class="food_details" data-aos="fade-up">
       <h2>Soup</h2>
       <p>Your choice of Chicken, Tofu or Vegetables $8.95,<br> Beef or Pork $10,<br>
         Shrimp $12, Seafood $ 14</p>
@@ -49,7 +50,7 @@
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'SOUP'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -64,16 +65,16 @@
       <%}%>
 
     </div>
-    <p class="notes-menu">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
+    <p class="notes-menu" data-aos="fade-up">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
 
   </section>
 
   <section class="menus-section">
-    <h2>Salad</h2>
+    <h2 data-aos="fade-up">Salad</h2>
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'SALAD'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -91,7 +92,7 @@
   </section>
 
   <section class="menus-section">
-    <div class="food_details">
+    <div class="food_details" data-aos="fade-up" data-aos-mirror="true">
       <h2>Stir-Fried</h2>
       <p>​Served with steamed rice. <br>
         ​Substitute brown rice add $1 <br>
@@ -102,7 +103,7 @@
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'STIR-FRIED'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -120,7 +121,7 @@
   </section>
 
   <section class="menus-section">
-    <div class="food_details">
+    <div class="food_details" data-aos="fade-up">
       <h2>Noodles</h2>
       <p>​Choice of Chicken, Tofu, Vegetable $11, Beef or Pork $12, <br>
         Shrimp $14, Seafood $16
@@ -130,7 +131,7 @@
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'NOODLES'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -148,11 +149,11 @@
   </section>
 
   <section class="menus-section">
-    <h2>Noodle Soup</h2>
+    <h2 data-aos="fade-up">Noodle Soup</h2>
     <div class="grid">
       <% for(var i=0; i<menu.length; i++){ %>
       <%if(menu[i].category === 'NOODLES-SOUP'){%>
-      <div class="col span-1-of-2 food_menu">
+      <div class="col span-1-of-2 food_menu" data-aos="fade-up">
         <p class="food_name">
           <%= menu[i].food_name %>
         </p>
@@ -167,11 +168,11 @@
       <%}%>
 
     </div>
-    <p class="notes-menu">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
+    <p class="notes-menu" data-aos="fade-up">Spice level : *mild, **medium, ***hot, <span> ****very hot</span></p>
 
 
     <section class="menus-section">
-      <div class="food_details">
+      <div class="food_details" data-aos="fade-up">
         <h2>Curries</h2>
         <p>​Served with steamed rice. <br>
           ​Substitute brown rice add $1 <br>
@@ -182,7 +183,7 @@
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'CURRIES'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -200,7 +201,7 @@
     </section>
 
     <section class="menus-section">
-      <div class="food_details">
+      <div class="food_details" data-aos="fade-up">
         <h2>Fried Rice</h2>
         <p>​Choice of Chicken, Tofu, Vegetable $11, Beef or Pork $12, <br>
           Shrimp $14, Seafood $16
@@ -210,7 +211,7 @@
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'FRIED-RICE'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -228,14 +229,14 @@
     </section>
 
     <section class="menus-section">
-      <div class="food_details">
+      <div class="food_details" data-aos="fade-up">
         <h2>Specials</h2>
         <p>​Served with steamed rice. Substitute brown rice add $1 </p>
       </div>
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'SPECIALS'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -253,11 +254,11 @@
     </section>
 
     <section class="menus-section">
-      <h2>Side</h2>
-      <div class="grid">
+      <h2 data-aos="fade-up">Side</h2>
+      <div class="grid" >
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'SIDE'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -274,7 +275,7 @@
       </div>
     </section>
 
-    <div class="container img-menu desserts">
+    <div class="container img-menu desserts" data-aos="fade-up">
       <img src="/images/Dessert-image.jpg" alt="">
       <div class="text-block">
         <h1>Dessert/Drinks</h1>
@@ -283,11 +284,11 @@
 
 
     <section class="menus-section">
-      <h2>Dessert</h2>
+      <h2 data-aos="fade-up">Dessert</h2>
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'DESSERT'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -305,11 +306,11 @@
     </section>
 
     <section class="menus-section">
-      <h2>Drinks</h2>
+      <h2 data-aos="fade-up">Drinks</h2>
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'DRINKS'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -327,11 +328,11 @@
     </section>
 
     <section class="menus-section">
-      <h2>Beer (Bottle)</h2>
+      <h2 data-aos="fade-up"> Beer (Bottle)</h2>
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'Beer (Bottle)'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -349,7 +350,7 @@
     </section>
 
     <section class="menus-section">
-      <div class="food_details">
+      <div class="food_details" data-aos="fade-up">
         <h2>Wine</h2>
         <p>​ All house wine $6 <br>
           Chardonnay, Cabernet Sauvignon, Merot, Resling
@@ -358,7 +359,7 @@
       <div class="grid">
         <% for(var i=0; i<menu.length; i++){ %>
         <%if(menu[i].category === 'WINE'){%>
-        <div class="col span-1-of-2 food_menu">
+        <div class="col span-1-of-2 food_menu" data-aos="fade-up">
           <p class="food_name">
             <%= menu[i].food_name %>
           </p>
@@ -421,6 +422,10 @@
       </ul>
     <% } %></p>
     -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>    
 </body>
 
 </html>
