--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -958,6 +958,12 @@ footer p {
 @media only screen and (max-width:500px){
   html{font-size: 8px;}
 
+  .sticky .nav-ul {
+    height: 208px;
+   }
+.menu-toggle{
+    top: 24px;
+}
   .btn-orange{
       padding: 20px 40px;
       font-size: 1.7rem;
