Editing bar page

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -35,7 +35,9 @@ footer{
         font-size: 3rem;
 
     }
-
+    h2::after{
+        height: 4px;
+    }
     .food_details h2{
         font-size: 2rem;
     }
