--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -21,8 +21,8 @@
             <img src="images/WildTiger-logo-black.png" alt="">
           </div>
           <ul class="nav-ul">
-            <li><a href="../">Home&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
-            <li><a href="/menu">Menu&ensp;&ensp;&ensp;&ensp;&ensp;</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="/menu">Menu</a></li>
             <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
             <li><a href="/bar">Bar</a></li>
             <li><a href="">Locations</a></li>
