--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -28,7 +28,7 @@
                     <li><a href="../menu">Menu</a></li>
                     <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
                     <li><a href="/">Bar</a></li>
-                    <li><a href="">Locations</a></li>
+                    <li><a href="../#locations">Locations</a></li>
                   </ul>
         
                   <div class="menu-toggle sticky-toggle">
@@ -39,11 +39,12 @@
                 </nav>
         
     <div class="container img-menu">
-        <img src="/images/menu-bar-image.jpg" alt="">
+        <img src="/images/bar-menu.png" alt="">
         <div class="text-block">
             <h1>Happy Hours</h1>
             <span>3:00 - 6:00</span>
         </div>
+        <div class="arrow-down"><ion-icon name="arrow-down"></ion-icon></div>
     </div>
 
 
@@ -109,7 +110,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="../menu">Menu</a></li>
                     <li><a href="/bar">Bar</a></li>
-                    <li><a href="/">Where To Find Us?</a></li>
+                    <li><a href="../#locations">Where To Find Us?</a></li>
                 </ul>
             </div>
 
