--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,7 +25,7 @@
             <li><a href="/menu">Menu</a></li>
             <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
             <li><a href="/bar">Bar</a></li>
-            <li><a href="">Locations</a></li>
+            <li><a href="../#locations">Locations</a></li>
           </ul>
 
           <div class="menu-toggle sticky-toggle">
@@ -35,12 +35,14 @@
     
         </nav>
 
-  <div class="container img-menu">
-    <img src="/images/Menu-image.jpg" alt="">
+  <div class="container img-menu main-menu-image">
+    <img src="/images/menu-test-image-2x.png" alt="">
     <div class="text-block">
       <h1>Lunch/dinner</h1>
     </div>
+    <div class="arrow-down"><ion-icon name="arrow-down"></ion-icon></div>
   </div>
+
 
   <section class="menus-section" id="menu-section--js">
     <div class="food_details">  
@@ -307,7 +309,7 @@
     </section>
 
     <div class="container img-menu desserts" data-aos="fade-up">
-      <img src="/images/Dessert-image.jpg" alt="">
+      <img src="/images/dessert-menu.png" alt="">
       <div class="text-block">
         <h1>Dessert/Drinks</h1>
       </div>
@@ -420,7 +422,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/menu">Menu</a></li>
             <li><a href="../bar">Bar</a></li>
-            <li><a href="/">Where To Find Us?</a></li>
+            <li><a href="../#locations">Where To Find Us?</a></li>
           </ul>
         </div>
 
