--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -39,7 +39,7 @@
                 </nav>
         
     <div class="container img-menu">
-        <img src="/images/bar-menu.png" alt="">
+        <img src="/images/bar-menu.jpg" alt="">
         <div class="text-block">
             <h1>Happy Hours</h1>
             <span>3:00 - 6:00</span>
