--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -36,7 +36,7 @@
         </nav>
 
   <div class="container img-menu main-menu-image">
-    <img src="/images/menu-test-image-2x.png" alt="">
+    <img src="/images/menu-test-image.jpg" alt="">
     <div class="text-block">
       <h1>Lunch/dinner</h1>
     </div>
@@ -309,7 +309,7 @@
     </section>
 
     <div class="container img-menu desserts" data-aos="fade-up">
-      <img src="/images/dessert-menu.png" alt="">
+      <img src="/images/dessert-menu.jpg" alt="">
       <div class="text-block">
         <h1>Dessert/Drinks</h1>
       </div>
