--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -22,7 +22,7 @@ footer{
 }
 @media only screen and (max-width: 1052px){
     .main-menu-image img{
-        content: url("/images/menu-phone.png");
+        content: url("/images/menu-phone.jpg");
         max-height: 100vh;
     }
 }
@@ -42,7 +42,7 @@ footer{
     }
     .sticky .nav-open {
         margin-top: 5.6em;
-        height: 250px;
+        height: 254px;
     }
 
     .nav-ul li a{
