--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -27,7 +27,7 @@
                     <li><a href="../">Home</a></li>
                     <li><a href="../menu">Menu</a></li>
                     <li class="wild-logo-li wild-logo-li-black"><a class="wild-tiger-logo wild-tiger-logo-black" href="/">Wild Tiger</a></li>
-                    <li><a href="/">Bar</a></li>
+                    <li><a href="/bar">Bar</a></li>
                     <li><a href="../#locations">Locations</a></li>
                   </ul>
         
