--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -310,7 +310,7 @@
 
     <div class="container img-menu desserts" data-aos="fade-up">
       <img src="/images/dessert-menu.jpg" alt="">
-      <div class="text-block">
+      <div class="text-block dessert-block">
         <h1>Dessert/Drinks</h1>
       </div>
     </div>
